// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon AlertFilledIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-9s3cfn-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clip-rule="evenodd"
      d="M16.4661 0.5C16.7332 0.5 16.9893 0.6069 17.1771 0.796862L23.2111 6.89871C23.3962 7.08591 23.5 7.33857 23.5 7.60185V16.3935C23.5 16.6595 23.394 16.9146 23.2055 17.1023L17.0712 23.2087C16.8838 23.3953 16.6301 23.5 16.3657 23.5H7.63889C7.37177 23.5 7.11576 23.3931 6.92792 23.2032L0.789033 16.9968C0.60386 16.8095 0.5 16.5569 0.5 16.2935V7.60646C0.5 7.34045 0.605983 7.08541 0.794505 6.89774L6.92885 0.791284C7.11625 0.604732 7.36991 0.5 7.63434 0.5H16.4661ZM16.7071 7.29289C17.0976 7.68342 17.0976 8.31658 16.7071 8.70711L13.4142 12L16.7071 15.2929C17.0976 15.6834 17.0976 16.3166 16.7071 16.7071C16.3166 17.0976 15.6834 17.0976 15.2929 16.7071L12 13.4142L8.70711 16.7071C8.31658 17.0976 7.68342 17.0976 7.29289 16.7071C6.90237 16.3166 6.90237 15.6834 7.29289 15.2929L10.5858 12L7.29289 8.70711C6.90237 8.31658 6.90237 7.68342 7.29289 7.29289C7.68342 6.90237 8.31658 6.90237 8.70711 7.29289L12 10.5858L15.2929 7.29289C15.6834 6.90237 16.3166 6.90237 16.7071 7.29289Z"
      fill="currentColor"
      fill-rule="evenodd"
      stroke="none"
    />
  </svg>
</div>
`;

exports[`Icon AlertIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-9s3cfn-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M16.7525 1.79686C16.5646 1.6069 16.3086 1.5 16.0414 1.5H8.04987C7.78544 1.5 7.53178 1.60473 7.34437 1.79128L1.79451 7.31592C1.60598 7.50359 1.5 7.75863 1.5 8.02464V15.8844C1.5 16.1478 1.60386 16.4005 1.78903 16.5877L7.34344 22.2032C7.53128 22.3931 7.7873 22.5 8.05441 22.5H15.9501C16.2146 22.5 16.4682 22.3953 16.6556 22.2087L22.2055 16.6841C22.394 16.4964 22.5 16.2414 22.5 15.9754V8.02003C22.5 7.75675 22.3962 7.5041 22.2111 7.31689L16.7525 1.79686Z"
    />
    <path
      d="M8 16L16 8"
    />
    <path
      d="M16 16L8 8"
    />
  </svg>
</div>
`;

exports[`Icon ArrowDownIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-9s3cfn-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 3L12 20"
    />
    <path
      d="M17 16L12 21L7 16"
    />
  </svg>
</div>
`;

exports[`Icon ArrowLeftIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-9s3cfn-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M21 12L4 12"
    />
    <path
      d="M8 17L3 12L8 7"
    />
  </svg>
</div>
`;

exports[`Icon ArrowRightIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-9s3cfn-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M3 12L20 12"
    />
    <path
      d="M16 7L21 12L16 17"
    />
  </svg>
</div>
`;

exports[`Icon ArrowUpDownIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-9s3cfn-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m17 16-4.646 4.646a.5.5 0 0 1-.708 0L7 16M7 7.793l4.646-4.646a.5.5 0 0 1 .708 0L17 7.793"
    />
  </svg>
</div>
`;

exports[`Icon ArrowUpIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-9s3cfn-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 21V4"
    />
    <path
      d="M7 8L12 3L17 8"
    />
  </svg>
</div>
`;

exports[`Icon AvatarIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-9s3cfn-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M4.5 19.1773C6.74319 17.9616 9.42279 17.0003 11.9999 17.0003C14.5769 17.0003 17.2567 17.9618 19.4999 19.1775M15.2053 9.95293C15.2036 10.4573 15.0723 10.9535 14.823 11.3977C14.5737 11.842 14.2141 12.2205 13.7759 12.5C13.3377 12.7794 12.8345 12.9511 12.3106 13C11.7867 13.0489 11.2584 12.9733 10.7722 12.7801C10.286 12.5869 9.85698 12.2819 9.52298 11.892C9.18899 11.5022 8.96036 11.0396 8.85721 10.545C8.75406 10.0504 8.7796 9.53905 8.93158 9.05615C9.08357 8.57326 9.35732 8.13367 9.72865 7.77621C10.1769 7.34467 10.7489 7.05056 11.372 6.93123C11.9951 6.81191 12.6412 6.87274 13.2281 7.10602C13.815 7.3393 14.3164 7.73449 14.6684 8.2414C15.0204 8.7483 15.2073 9.34403 15.2053 9.95293Z"
    />
    <circle
      cx="12"
      cy="12"
      r="10.5"
    />
  </svg>
</div>
`;

exports[`Icon ChartBarIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-9s3cfn-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M21 21H6.2C5.07989 21 4.51984 21 4.09202 20.782C3.71569 20.5903 3.40973 20.2843 3.21799 19.908C3 19.4802 3 18.9201 3 17.8V3M8 8V17M18 13V17M13 5V17"
    />
  </svg>
</div>
`;

exports[`Icon ChartLineIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-9s3cfn-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M21 21H4.6C4.03995 21 3.75992 21 3.54601 20.891C3.35785 20.7951 3.20487 20.6422 3.10899 20.454C3 20.2401 3 19.9601 3 19.4V3M20 8L16.0811 12.1827C15.9326 12.3412 15.8584 12.4204 15.7688 12.4614C15.6897 12.4976 15.6026 12.5125 15.516 12.5047C15.4179 12.4958 15.3215 12.4458 15.1287 12.3457L11.8713 10.6543C11.6785 10.5542 11.5821 10.5042 11.484 10.4953C11.3974 10.4875 11.3103 10.5024 11.2312 10.5386C11.1416 10.5796 11.0674 10.6588 10.9189 10.8173L7 15"
    />
  </svg>
</div>
`;

exports[`Icon ChevronDownIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-9s3cfn-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m20 9-7.646 7.646a.5.5 0 0 1-.708 0L4 9"
    />
  </svg>
</div>
`;

exports[`Icon ChevronLeftIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-9s3cfn-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m15 20-7.646-7.646a.5.5 0 0 1 0-.708L15 4"
    />
  </svg>
</div>
`;

exports[`Icon ChevronRightIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-9s3cfn-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m9 4 7.646 7.646a.5.5 0 0 1 0 .708L9 20"
    />
  </svg>
</div>
`;

exports[`Icon ChevronUpIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-9s3cfn-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m4 15 7.646-7.646a.5.5 0 0 1 .708 0L20 15"
    />
  </svg>
</div>
`;

exports[`Icon ChevronsLeftIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-9s3cfn-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <polyline
      points="11 17 6 12 11 7"
    />
    <polyline
      points="18 17 13 12 18 7"
    />
  </svg>
</div>
`;

exports[`Icon ChevronsRightIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-9s3cfn-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <polyline
      points="13 17 18 12 13 7"
    />
    <polyline
      points="6 17 11 12 6 7"
    />
  </svg>
</div>
`;

exports[`Icon ChevronsUpDownIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-9s3cfn-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M7.5 8L11.8232 3.67678C11.9209 3.57915 12.0791 3.57915 12.1768 3.67678L16.5 8"
    />
    <path
      d="M16.5 16L12.1768 20.3232C12.0791 20.4209 11.9209 20.4209 11.8232 20.3232L7.5 16"
    />
  </svg>
</div>
`;

exports[`Icon CloseIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-9s3cfn-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M5 19L19 5"
    />
    <path
      d="M19 19L5 5"
    />
  </svg>
</div>
`;

exports[`Icon CopyIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-9s3cfn-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      height="12"
      rx="1"
      width="12"
      x="9"
      y="9"
    />
    <path
      d="M5 15H4C3.44772 15 3 14.5523 3 14V4C3 3.44772 3.44772 3 4 3H14C14.5523 3 15 3.44772 15 4V5"
    />
  </svg>
</div>
`;

exports[`Icon DeleteIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-9s3cfn-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M3 5.99999H21M10 17.5V10M14 17.5V10M13.8 1.99999H10.2C9.53726 1.99999 9 1.89543 9 3V5.99999H15V3C15 1.89543 14.4627 1.99999 13.8 1.99999ZM18.657 20.7769C18.5944 21.4682 17.964 22.0001 17.2073 22H6.7937C6.03694 22.0001 5.40656 21.4682 5.344 20.7769L4 5.99999H20L18.657 20.7769Z"
    />
  </svg>
</div>
`;

exports[`Icon DownloadIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-9s3cfn-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M21 16V19.6682C20.9975 20.0205 20.8849 20.3575 20.6863 20.6065C20.4878 20.8556 20.2192 20.9969 19.9383 21H4.06166C3.78085 20.9969 3.51224 20.8556 3.31367 20.6065C3.1151 20.3575 3.00245 20.0205 3 19.6682V16M12 3L12 15M12 15L16 11M12 15L8 11"
    />
  </svg>
</div>
`;

exports[`Icon EditIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-9s3cfn-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M11 3.99998H4C3.46957 3.99998 2.96086 4.2107 2.58579 4.58577C2.21071 4.96084 2 5.46955 2 5.99998V20C2 20.5304 2.21071 21.0391 2.58579 21.4142C2.96086 21.7893 3.46957 22 4 22H18C18.5304 22 19.0391 21.7893 19.4142 21.4142C19.7893 21.0391 20 20.5304 20 20V13M18.5 2.49998C18.8978 2.10216 19.4374 1.87866 20 1.87866C20.5626 1.87866 21.1022 2.10216 21.5 2.49998C21.8978 2.89781 22.1213 3.43737 22.1213 3.99998C22.1213 4.56259 21.8978 5.10216 21.5 5.49998L12 15L8 16L9 12L18.5 2.49998Z"
    />
  </svg>
</div>
`;

exports[`Icon EmailIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-9s3cfn-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M22 6C22 4.9 21.1 4 20 4H4C2.9 4 2 4.9 2 6M22 6V18C22 19.1 21.1 20 20 20H4C2.9 20 2 19.1 2 18V6M22 6L12 13L2 6"
    />
  </svg>
</div>
`;

exports[`Icon ExitIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-9s3cfn-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M9 21H5C4.46957 21 3.96086 20.7893 3.58579 20.4142C3.21071 20.0391 3 19.5304 3 19V5C3 4.46957 3.21071 3.96086 3.58579 3.58579C3.96086 3.21071 4.46957 3 5 3H9"
    />
    <path
      d="M16 17L21 12L16 7"
    />
    <path
      d="M21 12H9"
    />
  </svg>
</div>
`;

exports[`Icon ExternalLinkIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-9s3cfn-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M9 15L21 3"
    />
    <path
      d="M15 3H21"
    />
    <path
      d="M21 9V3"
    />
    <path
      d="M7 2.99969H4.08981C3.80891 2.99457 3.53726 3.10042 3.3334 3.29442C3.12953 3.48842 3.00981 3.75503 3 4.0368V19.9345C3.00245 20.2163 3.1151 20.4858 3.31367 20.6851C3.51224 20.8844 3.78085 20.9974 4.06166 20.9999H19.9383C20.2192 20.9974 20.4878 20.8844 20.6863 20.6851C20.8849 20.4858 20.9975 20.2163 21 19.9345V16.9999"
    />
  </svg>
</div>
`;

exports[`Icon FacebookIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-9s3cfn-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M17 2H14C12.6739 2 11.4021 2.52678 10.4645 3.46447C9.52678 4.40215 9 5.67392 9 7V10H6V14H9V22H13V14H16L17 10H13V7C13 6.73478 13.1054 6.48043 13.2929 6.29289C13.4804 6.10536 13.7348 6 14 6H17V2Z"
    />
  </svg>
</div>
`;

exports[`Icon FactoryIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-9s3cfn-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M17.183 12.8457L20.3183 13.6296C20.7189 13.7297 21 14.0897 21 14.5027V20.1C21 20.5971 20.5971 21 20.1 21H3.9C3.40294 21 3 20.5971 3 20.1V10.4527C3 9.86718 3.55025 9.43756 4.11828 9.57957L15.3805 12.3951M17.183 12.8457C17.7506 12.9868 18.3 12.5574 18.3 11.9723V3.9C18.3 3.40294 17.8971 3 17.4 3H15.6C15.1029 3 14.7 3.40294 14.7 3.9V11.5223C14.7 11.9349 14.9805 12.2946 15.3805 12.3951M17.183 12.8457L15.3817 12.3954L15.3805 12.3951M7.5 17.4H6.6V16.5H7.5V17.4ZM11.1 16.5H12V17.4H11.1V16.5Z"
    />
  </svg>
</div>
`;

exports[`Icon FilterIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-9s3cfn-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M3 6H21M3 12H21M3 18H21M7 4V8M15 10V14M7 16V20"
    />
  </svg>
</div>
`;

exports[`Icon HelpIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-9s3cfn-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M9.08984 8.99959C9.32495 8.33126 9.789 7.7677 10.3998 7.40873C11.0106 7.04975 11.7287 6.91853 12.427 7.0383C13.1253 7.15808 13.7587 7.52112 14.2149 8.06312C14.6712 8.60512 14.9209 9.29111 14.9198 9.99959C14.9198 11.9996 11.9198 12.9996 11.9198 12.9996M12 17H12.01M12 2C9.34784 2 6.8043 3.05357 4.92893 4.92893C3.05357 6.8043 2 9.34784 2 12C2 14.6522 3.05357 17.1957 4.92893 19.0711C6.8043 20.9464 9.34784 22 12 22C14.6522 22 17.1957 20.9464 19.0711 19.0711C20.9464 17.1957 22 14.6522 22 12C22 9.34784 20.9464 6.8043 19.0711 4.92893C17.1957 3.05357 14.6522 2 12 2Z"
    />
  </svg>
</div>
`;

exports[`Icon HomeIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-9s3cfn-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M20 11V21C20 21.5523 19.5523 22 19 22H5C4.44772 22 4 21.5523 4 21V11"
    />
    <path
      d="M2 12C3.83629 10.0774 12 2 12 2C12 2 20.1637 10.0774 22 12"
    />
  </svg>
</div>
`;

exports[`Icon InfoFilledIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-9s3cfn-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clip-rule="evenodd"
      d="M12 1C5.9 1 1 5.9 1 12C1 18.1 5.9 23 12 23C18.1 23 23 18.1 23 12C23 5.9 18.1 1 12 1ZM12 18C11.4477 18 11 17.5523 11 17V11C11 10.4477 11.4477 10 12 10C12.5523 10 13 10.4477 13 11V17C13 17.5523 12.5523 18 12 18ZM12 8C12.5523 8 13 7.55228 13 7C13 6.44772 12.5523 6 12 6C11.4477 6 11 6.44772 11 7C11 7.55228 11.4477 8 12 8Z"
      fill="currentColor"
      fill-rule="evenodd"
      stroke="none"
    />
  </svg>
</div>
`;

exports[`Icon InfoIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-9s3cfn-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
    <line
      x1="12"
      x2="12"
      y1="17"
      y2="11"
    />
    <path
      d="M12 7H12.01"
    />
  </svg>
</div>
`;

exports[`Icon InstagramIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-9s3cfn-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M17.5 6.5H17.51M7 2H17C19.7614 2 22 4.23858 22 7V17C22 19.7614 19.7614 22 17 22H7C4.23858 22 2 19.7614 2 17V7C2 4.23858 4.23858 2 7 2ZM15.9997 11.37C16.1231 12.2022 15.981 13.0522 15.5935 13.799C15.206 14.5458 14.5929 15.1514 13.8413 15.5297C13.0898 15.9079 12.2382 16.0396 11.4075 15.9059C10.5768 15.7723 9.80947 15.3801 9.21455 14.7852C8.61962 14.1902 8.22744 13.4229 8.09377 12.5922C7.96011 11.7615 8.09177 10.9099 8.47003 10.1584C8.84829 9.40685 9.45389 8.79374 10.2007 8.40624C10.9475 8.01874 11.7975 7.87658 12.6297 8C13.4786 8.12588 14.2646 8.52146 14.8714 9.1283C15.4782 9.73515 15.8738 10.5211 15.9997 11.37Z"
    />
  </svg>
</div>
`;

exports[`Icon LinkedInIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-9s3cfn-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M16 8C17.5913 8 19.1174 8.63214 20.2426 9.75736C21.3679 10.8826 22 12.4087 22 14V21H18V14C18 13.4696 17.7893 12.9609 17.4142 12.5858C17.0391 12.2107 16.5304 12 16 12C15.4696 12 14.9609 12.2107 14.5858 12.5858C14.2107 12.9609 14 13.4696 14 14V21H10V14C10 12.4087 10.6321 10.8826 11.7574 9.75736C12.8826 8.63214 14.4087 8 16 8Z"
    />
    <path
      d="M6 9H2V21H6V9Z"
    />
    <path
      d="M4 6C5.10457 6 6 5.10457 6 4C6 2.89543 5.10457 2 4 2C2.89543 2 2 2.89543 2 4C2 5.10457 2.89543 6 4 6Z"
    />
  </svg>
</div>
`;

exports[`Icon MenuIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-9s3cfn-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M3 6H21"
    />
    <path
      d="M3 12H21"
    />
    <path
      d="M3 18H21"
    />
  </svg>
</div>
`;

exports[`Icon PlusIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-9s3cfn-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 5V19"
    />
    <path
      d="M5 12H19"
    />
  </svg>
</div>
`;

exports[`Icon PrintIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-9s3cfn-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M6 9V2H18V9M6 18H4C3.46957 18 2.96086 17.7893 2.58579 17.4142C2.21071 17.0391 2 16.5304 2 16V11C2 10.4696 2.21071 9.96086 2.58579 9.58579C2.96086 9.21071 3.46957 9 4 9H20C20.5304 9 21.0391 9.21071 21.4142 9.58579C21.7893 9.96086 22 10.4696 22 11V16C22 16.5304 21.7893 17.0391 21.4142 17.4142C21.0391 17.7893 20.5304 18 20 18H18M6 14H18V22H6V14Z"
    />
  </svg>
</div>
`;

exports[`Icon ProgressBlockedIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-9s3cfn-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10.5"
    />
    ,
    <line
      stroke-linecap="round"
      x1="7"
      x2="17"
      y1="12"
      y2="12"
    />
  </svg>
</div>
`;

exports[`Icon ProgressDoingIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-9s3cfn-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M6.5 13.5C7.32843 13.5 8 12.8284 8 12C8 11.1716 7.32843 10.5 6.5 10.5C5.67157 10.5 5 11.1716 5 12C5 12.8284 5.67157 13.5 6.5 13.5Z"
      fill="currentColor"
      stroke="none"
    />
    <path
      d="M12 13.5C12.8284 13.5 13.5 12.8284 13.5 12C13.5 11.1716 12.8284 10.5 12 10.5C11.1716 10.5 10.5 11.1716 10.5 12C10.5 12.8284 11.1716 13.5 12 13.5Z"
      fill="currentColor"
      stroke="none"
    />
    <path
      d="M17.5 13.5C18.3284 13.5 19 12.8284 19 12C19 11.1716 18.3284 10.5 17.5 10.5C16.6716 10.5 16 11.1716 16 12C16 12.8284 16.6716 13.5 17.5 13.5Z"
      fill="currentColor"
      stroke="none"
    />
    <circle
      cx="12"
      cy="12"
      r="10.5"
    />
  </svg>
</div>
`;

exports[`Icon ProgressTodoIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-9s3cfn-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10.5"
      stroke-dasharray="4 4"
      stroke-linecap="round"
    />
  </svg>
</div>
`;

exports[`Icon SearchIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-9s3cfn-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <line
      x1="15.5568"
      x2="21.9208"
      y1="15.5562"
      y2="21.9201"
    />
    <circle
      cx="9.8995"
      cy="9.89941"
      r="7"
    />
  </svg>
</div>
`;

exports[`Icon SettingsIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-9s3cfn-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="3"
    />
    <path
      d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z"
    />
  </svg>
</div>
`;

exports[`Icon SuccessFilledIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-9s3cfn-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clip-rule="evenodd"
      d="M12 24C18.6274 24 24 18.6274 24 12C24 5.37258 18.6274 0 12 0C5.37258 0 0 5.37258 0 12C0 18.6274 5.37258 24 12 24ZM17.7071 9.70711C18.0976 9.31658 18.0976 8.68342 17.7071 8.29289C17.3166 7.90237 16.6834 7.90237 16.2929 8.29289L10 14.5858L7.70711 12.2929C7.31658 11.9024 6.68342 11.9024 6.29289 12.2929C5.90237 12.6834 5.90237 13.3166 6.29289 13.7071L9.29289 16.7071C9.68342 17.0976 10.3166 17.0976 10.7071 16.7071L17.7071 9.70711Z"
      fill="currentColor"
      fill-rule="evenodd"
      stroke="none"
    />
  </svg>
</div>
`;

exports[`Icon SuccessIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-9s3cfn-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10.5"
    />
    <path
      d="M7 13L10 16L17 9"
    />
  </svg>
</div>
`;

exports[`Icon ThumbsDownIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-9s3cfn-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M16 1.00012H18.67C19.236 0.990108 19.7859 1.18825 20.2154 1.55694C20.645 1.92562 20.9242 2.43918 21 3.00012V10.0001C20.9242 10.5611 20.645 11.0746 20.2154 11.4433C19.7859 11.812 19.236 12.0101 18.67 12.0001H16M9.00003 14.0001V18.0001C9.00003 18.7958 9.3161 19.5588 9.87871 20.1214C10.4413 20.684 11.2044 21.0001 12 21.0001L16 12.0001V1.00012H4.72003C4.2377 0.994665 3.76965 1.16371 3.40212 1.47611C3.0346 1.78851 2.79235 2.22321 2.72003 2.70012L1.34003 11.7001C1.29652 11.9868 1.31586 12.2794 1.39669 12.5579C1.47753 12.8363 1.61793 13.0938 1.80817 13.3126C1.99842 13.5314 2.23395 13.7062 2.49846 13.8249C2.76297 13.9436 3.05012 14.0034 3.34003 14.0001H9.00003Z"
    />
  </svg>
</div>
`;

exports[`Icon ThumbsUpIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-9s3cfn-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M6 21H3C2.46957 21 1.96086 20.7893 1.58579 20.4142C1.21071 20.0391 1 19.5304 1 19V12C1 11.4696 1.21071 10.9609 1.58579 10.5858C1.96086 10.2107 2.46957 10 3 10H6M13 8V4C13 3.20435 12.6839 2.44129 12.1213 1.87868C11.5587 1.31607 10.7956 1 10 1L6 10V21H17.28C17.7623 21.0055 18.2304 20.8364 18.5979 20.524C18.9654 20.2116 19.2077 19.7769 19.28 19.3L20.66 10.3C20.7035 10.0134 20.6842 9.72068 20.6033 9.44225C20.5225 9.16382 20.3821 8.90629 20.1919 8.68751C20.0016 8.46873 19.7661 8.29393 19.5016 8.17522C19.2371 8.0565 18.9499 7.99672 18.66 8H13Z"
    />
  </svg>
</div>
`;

exports[`Icon TwitterIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-9s3cfn-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M23 2.99998C22.0424 3.67546 20.9821 4.19209 19.86 4.52999C19.2577 3.8375 18.4573 3.34668 17.567 3.12391C16.6767 2.90115 15.7395 2.95718 14.8821 3.28444C14.0247 3.6117 13.2884 4.19439 12.773 4.9537C12.2575 5.71302 11.9877 6.61232 12 7.52998V8.52998C10.2426 8.57555 8.50127 8.1858 6.93101 7.39543C5.36074 6.60506 4.01032 5.43862 3 3.99998C3 3.99998 -1 13 8 17C5.94053 18.398 3.48716 19.0989 1 19C10 24 21 19 21 7.49998C20.9991 7.22144 20.9723 6.94358 20.92 6.66999C21.9406 5.66348 22.6608 4.3927 23 2.99998Z"
    />
  </svg>
</div>
`;

exports[`Icon UploadIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-9s3cfn-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 15L12 3"
    />
    <path
      d="M8 7L12.0002 3.00024"
    />
    <path
      d="M16 7L12 3"
    />
    <path
      d="M21 16V19.6682C20.9975 20.0205 20.8849 20.3575 20.6863 20.6065C20.4878 20.8556 20.2192 20.9969 19.9383 21H4.06166C3.78085 20.9969 3.51224 20.8556 3.31367 20.6065C3.1151 20.3575 3.00245 20.0205 3 19.6682V16"
    />
  </svg>
</div>
`;

exports[`Icon WarningFilledIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-9s3cfn-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clip-rule="evenodd"
      d="M0 20.8L12 0L24 20.8H0ZM12 7C12.5523 7 13 7.44772 13 8V13C13 13.5523 12.5523 14 12 14C11.4477 14 11 13.5523 11 13V8C11 7.44772 11.4477 7 12 7ZM12 18C12.5523 18 13 17.5523 13 17C13 16.4477 12.5523 16 12 16C11.4477 16 11 16.4477 11 17C11 17.5523 11.4477 18 12 18Z"
      fill="currentColor"
      fill-rule="evenodd"
      stroke="none"
    />
  </svg>
</div>
`;

exports[`Icon WarningIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-9s3cfn-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12.8858 2.69113C12.5115 1.97647 11.4876 1.97824 11.1132 2.6929C7.60041 9.39921 5.30783 13.776 1.76707 20.5356C1.4183 21.2014 1.90105 22 2.65269 22H21.3473C22.099 22 22.5819 21.2018 22.2331 20.536L12.8858 2.69113Z"
    />
    <line
      x1="12"
      x2="12"
      y1="14"
      y2="9"
    />
    <path
      d="M12 18H12.01"
    />
  </svg>
</div>
`;

exports[`Icon WebsiteIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-9s3cfn-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M22 12C22 17.5228 17.5228 22 12 22M22 12C22 6.47715 17.5228 2 12 2M22 12H2M12 22C6.47715 22 2 17.5228 2 12M12 22C14.5013 19.2616 15.9228 15.708 16 12C15.9228 8.29203 14.5013 4.73835 12 2M12 22C9.49872 19.2616 8.07725 15.708 8 12C8.07725 8.29203 9.49872 4.73835 12 2M2 12C2 6.47715 6.47715 2 12 2"
    />
  </svg>
</div>
`;
